--- a/app/src/main/res/layout/activity_screen3.xml
+++ b/app/src/main/res/layout/activity_screen3.xml
@@ -2,10 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F9E559"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:background="#F9E559"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.saurabhpandey.fourscreenapp.Screen3">
 
@@ -68,8 +68,11 @@
         android:layout_below="@+id/buttonS34"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-
         android:text="Screen 3"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+
+
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
