--- a/app/src/main/res/layout/activity_screen4.xml
+++ b/app/src/main/res/layout/activity_screen4.xml
@@ -2,10 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-
-    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:background="#473E3F"
+
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.saurabhpandey.fourscreenapp.Screen4">
@@ -70,7 +70,9 @@
         android:layout_below="@+id/buttonS44"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-
         android:text="Screen 4"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="30sp"
+
+        android:textStyle="bold" />
 </RelativeLayout>
