Whatsapp Share Tested

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,5 +70,14 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="30sp"
         android:textStyle="bold" />
+<ImageButton
+    android:layout_width="80dp"
+    android:layout_height="80dp"
+    android:onClick="image11"
+    android:src="@drawable/whatsapp_small"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true" />
+
 
 </RelativeLayout>
